@@ -483,7 +483,7 @@
     <version release="gnome-2.14">
       <component name="evolution" dir="evolution" group="desktop">
         <podir dir="po"/>
-        <potname name="evolution-2.4.pot"/>
+        <potname name="evolution-2.6.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -514,7 +514,7 @@
     <version release="gnome-2.14">
       <component name="evolution-data-server" dir="evolution-data-server" group="desktop">
         <podir dir="po"/>
-        <potname name="evolution-data-server-1.4.pot"/>
+        <potname name="evolution-data-server-1.6.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -534,7 +534,7 @@
     <version release="gnome-2.14">
       <component name="evolution-exchange" dir="evolution-exchange" group="desktop">
         <podir dir="po"/>
-        <potname name="evolution-exchange-2.4.pot"/>
+        <potname name="evolution-exchange-2.6.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
