@@ -1,3 +1,7 @@
+2005-10-29  Funda Wang  <fundawang@linux.net.cn>
+
+	* translation-status.xml: Corrected gettext package of evolution*.
+
 2005-10-25  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: meld is back to HEAD.
